# SOTER

./: README.md  server.md
confidentiality/transformer/: figure.sh  figure7b-trans.py  pre-iwslt14-2.sh  readme.md  run.sh
confidentiality/vgg/: accuracy.txt  figure.sh  figure7a-vgg.py  models7a.py  readme.md  run.sh  test.py  train.py
figure8/8a/: oblifp_vgg.cpp  runobli.sh
figure8/8a/paper-fig/: soter_dist.py
figure8/8b/: fixed_dist.py
fingerprint_obliviousness/: CMakeLists.txt
fingerprint_obliviousness/figure8a/: CMakeLists.txt  obli_dist.py  oblifp_vgg.cpp  runobli.sh
fingerprint_obliviousness/figure8b/: CMakeLists.txt  fixed_dist.py  fixedfp_vgg.cpp  runfixed.sh
gpubaseline/dense-gpu/: runclient.sh
gpubaseline/trans-gpu/: CMakeLists.txt  run.sh  tfcuda.cpp
graphene-vgg-partition/: readme.md  run.sh  runclient.sh
mtr-partition/sens-vgg/0-all/MLCapsule/: CMakeLists.txt  Makefile  run.sh
script/: check.py  conf.sh  config.py  fetch.sh  latency.txt  latency_fig5.sh  normalized_latency.py  normalized_latency_trans.py  normalized_latency_vgg.py  oneforall.sh  run-fpcheck.sh  run-gpu.sh  run-latency.sh  run-relay-back.sh  run-relay-forw.sh  run-relay.sh  run-sensitivity-trans.sh  run-sensitivity-vgg.sh  run-sensitivity.sh  run-tee.sh  sensitivity_fig6.sh  sensitivity_trans.sh  sensitivity_vgg.sh  sentrans.py  senvgg.py
script/data/: agalex.txt  agdense.txt  agmlp.txt  agres.txt  agtrans.txt  agvgg.txt  ennclavevgg.txt  gpualex.txt  gpudense.txt  gpumlp.txt  gpures.txt  gputrans.txt  gpuvgg.txt  mlcalexnet.txt  mlcdensenet.txt  mlcmlp.txt  mlcresnet.txt  mlctrans.txt  mlcvgg.txt  soteralex.txt  soterdense.txt  sotermlp.txt  soterres.txt  sotertrans.txt  sotervgg.txt
shieldmodel/MLCapsule/: CMakeLists.txt  Makefile  build.sh  run.sh
shieldmodel/graphene/: enclave-key.pem
teertconfig/graphene-alex-partition/: runclient.sh
teertconfig/graphene-dense-partition/: runclient.sh
teertconfig/graphene-mlp-partition/: runclient.sh
teertconfig/graphene-res-partition/: manifestold.template  runclient.sh
teertconfig/graphene-trans-partition/: runclient.sh  runclient_func.sh
teertconfig/graphene-vgg-partition/: runclient.sh  runclient_func.sh
teeruntime/graphene-alex-partition/: runclient.sh
teeruntime/graphene-dense-partitioin/: runclient.sh
(+241 files in other folders)
